10 Упражнение Циклы и понимание списков

--- a/Python/10 Упражнение Циклы и понимание списков.ipynb
+++ b/Python/10 Упражнение Циклы и понимание списков.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "514e46ac",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "75a6a174",
    "metadata": {},
    "outputs": [],
@@ -57,11 +57,81 @@
     "    \"\"\"Возвращает, является ли данный список чисел счастливым. Список счастливых чисел содержит\n",
     "    по крайней мере одно число, кратное 7.\n",
     "    \"\"\"\n",
+    "    count = 0\n",
+    "    for num in nums:\n",
+    "        if num % 7 == 0:\n",
+    "            count +=1\n",
+    "    if count > 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "28fd8fb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_list = [1, 2, 3, 4, 5, 6, 7]\n",
+    "has_lucky_number(num_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ffbc127",
+   "metadata": {},
+   "source": [
+    "Правильный:\n",
+    "\n",
+    "Помните, что return приводит к немедленному завершению работы функции. Поэтому наша первоначальная реализация всегда выполнялась только на одной итерации. Мы можем вернуть значение False только в том случае, если мы просмотрели каждый элемент списка (и убедились, что ни один из них не является удачным). Хотя мы можем вернуться раньше, если ответ верный:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6b66938d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def has_lucky_number(nums):\n",
     "    for num in nums:\n",
     "        if num % 7 == 0:\n",
     "            return True\n",
-    "        else:\n",
-    "            return False"
+    "    # Мы исчерпали список, не найдя счастливого числа\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55a3be8b",
+   "metadata": {},
+   "source": [
+    "Вот однострочная версия, использующая понимание списка с помощью функции any в Python (вы можете прочитать о том, что она делает, вызвав help(any)):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c50ad790",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def has_lucky_number(nums):\n",
+    "    return any([num % 7 == 0 for num in nums])"
    ]
   },
   {
@@ -76,12 +146,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0f251114",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'list' and 'int'"
+     ]
+    }
+   ],
    "source": [
-    "#[1, 2, 3, 4] > 2"
+    "[1, 2, 3, 4] > 2"
    ]
   },
   {
@@ -96,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f899c682",
    "metadata": {},
    "outputs": [],
@@ -108,7 +190,79 @@
     "    >>> elementwise_greater_than([1, 2, 3, 4], 2)\n",
     "    [Ложь, Ложь, Правда, Правда]\n",
     "    \"\"\"\n",
-    "    pass"
+    "    list = []\n",
+    "    for i in L:\n",
+    "        if i > thresh:\n",
+    "            list.append(True)\n",
+    "        else:\n",
+    "            list.append(False)\n",
+    "    return list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6c70e1ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, False, True, True]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = [1, 2, 3, 4]\n",
+    "thresh = 2\n",
+    "elementwise_greater_than(L, thresh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1374cd6b",
+   "metadata": {},
+   "source": [
+    "Правильный:\n",
+    "\n",
+    "Вот одно из решений:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2859b733",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elementwise_greater_than(L, thresh):\n",
+    "    res = []\n",
+    "    for ele in L:\n",
+    "        res.append(ele > thresh)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c654e035",
+   "metadata": {},
+   "source": [
+    "И вот версия для ознакомления со списком:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef84b702",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elementwise_greater_than(L, thresh):\n",
+    "    return [ele > thresh for ele in L]"
    ]
   },
   {
@@ -123,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f9ff5b2f",
    "metadata": {},
    "outputs": [],
@@ -132,7 +286,66 @@
     "    \"\"\"При наличии списка блюд, подававшихся в течение определенного периода времени, верните значение True, если одно и то\n",
     "же блюдо подавалось два дня подряд, и значение False в противном случае.\n",
     "    \"\"\"\n",
-    "    pass"
+    "    for i in range(len(meals)-1):\n",
+    "        if meals[i] == meals[i + 1]:\n",
+    "            return True\n",
+    "    return False\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ec4075f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meals = ['борщ', 'котлета', 'борщ', 'суп', 'котлета', 'котлета']\n",
+    "menu_is_boring(meals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b96f67fc",
+   "metadata": {},
+   "source": [
+    "Правильный:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "be036367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def menu_is_boring(meals):\n",
+    "    # Iterate over all indices of the list, except the last one\n",
+    "    for i in range(len(meals)-1):\n",
+    "        if meals[i] == meals[i+1]:\n",
+    "            return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b156f4f4",
+   "metadata": {},
+   "source": [
+    "Ключом к нашему решению является вызов range. range(len(meals)) дал бы нам все индексы meals. Если бы мы использовали этот диапазон, на последней итерации цикла сравнивался бы последний элемент с элементом после него, который равен... IndexError! range(len(meals)-1) дает нам все индексы, кроме индекса последнего элемента.\n",
+    "\n",
+    "Но не нужно ли нам проверить, пуст ли параметр meals? Получается, что range(0) == range(-1) - они оба пустые. Таким образом, если meals имеет длину 0 или 1, мы просто не будем выполнять никаких итераций нашего цикла for."
    ]
   },
   {
