--- a/Python/12 Упражнение Строки и словари.ipynb
+++ b/Python/12 Упражнение Строки и словари.ipynb
@@ -220,15 +220,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2c9a9d45",
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_valid_zip(zip_code):\n",
-    "    \"\"\"Returns whether the input string is a valid (5 digit) zip code\n",
+    "    \"\"\"Возвращает, является ли введенная строка действительным (5-значным) почтовым индексом\n",
     "    \"\"\"\n",
-    "    "
+    "    return len(zip_code) == 5 and zip_code.isdigit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c14fcc37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_valid_zip(\"12345\")"
    ]
   },
   {
