12 Упражнение Строки и словари

--- a/2 Python/1 Hello, Python.ipynb
+++ b/2 Python/1 Hello, Python.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "f179859c",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
     "spam_amount = 0\n",
     "print(spam_amount)\n",
     "\n",
-    "# Ordering Spam, egg, Spam, Spam, bacon and Spam (4 more servings of Spam)\n",
+    "# Заказываем Спам, яйца, Спам, спам, бекон и Спам (еще 4 порции спама)\n",
     "spam_amount = spam_amount + 4\n",
     "\n",
     "if spam_amount > 0:\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f3a5042c",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "4\n"
      ]
     }
    ],
@@ -557,8 +557,8 @@
    "id": "486b3d82",
    "metadata": {},
    "source": [
-    "Your Turn¶\n",
-    "Now is your chance. Try your first Python programming exercise!"
+    "# ваш ход¶\n",
+    "Теперь у вас есть шанс. Попробуйте свое первое упражнение по программированию на Python!"
    ]
   }
  ],
