--- a/2 Python/10 Упражнение Циклы и понимание списков.ipynb
+++ b/2 Python/10 Упражнение Циклы и понимание списков.ipynb
@@ -416,6 +416,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8288fad",
+   "metadata": {},
+   "source": [
+    "Решение:\n",
+    "\n",
+    "Точная ожидаемая стоимость одного розыгрыша игрового автомата составляет 0,025, то есть чуть больше 2 центов. - видишь? Не каждая игра в казино Python Challenge направлена против игрока!\n",
+    "\n",
+    "Чтобы получить этот ответ, вам нужно будет реализовать функцию estimate_average_slot_payout(n_runs), чтобы имитировать запуск игрового автомата n_runs раз. Она должна возвращать выплату, усредненную за эти n_runs.\n",
+    "\n",
+    "Затем, как только функция определена, нам нужно только вызвать ее, чтобы оценить среднюю выплату по игровому автомату.\n",
+    "\n",
+    "Из-за высокой дисперсии результатов (есть очень редкие результаты с высокими выплатами, которые существенно влияют на среднее значение) вам может потребоваться запустить вашу функцию с очень высоким значением n_runs, чтобы получить стабильный ответ, близкий к истинному ожиданию. Например, вы могли бы использовать значение для n_runs, равное 1000000.\n",
+    "\n",
+    "Вот пример того, как могла бы выглядеть функция:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94de05a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def estimate_average_slot_payout(n_runs):\n",
+    "    # Сыграйте в игровой автомат n раз подряд, рассчитайте выплату по каждому из них.\n",
+    "    payouts = [play_slot_machine()-1 for i in range(n_runs)]\n",
+    "    # Вычислить среднее значение\n",
+    "    avg_payout = sum(payouts) / n_runs\n",
+    "    return avg_payout\n",
+    "    \n",
+    "estimate_average_slot_payout(10000000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1dcdbb7",
+   "metadata": {},
+   "source": [
+    "Это должно дать ответ, близкий к 0,025!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c1dd7291",
    "metadata": {},
    "source": [
