--- a/2 Python/5 Логические значения и условные выражения.ipynb
+++ b/2 Python/5 Логические значения и условные выражения.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "80596a66",
    "metadata": {},
    "outputs": [
@@ -434,8 +434,8 @@
      "text": [
       "Печатается только если x положительный; x = 1\n",
       "Также печатается только если x положительный; x = 1\n",
-      "Always printed, regardless of x's value; x = 1\n",
-      "Always printed, regardless of x's value; x = 0\n"
+      "Всегда печатается, независимо от значения x; x = 1\n",
+      "Всегда печатается, независимо от значения x; x = 0\n"
      ]
     }
    ],
@@ -444,7 +444,7 @@
     "    if x > 0:\n",
     "        print(\"Печатается только если x положительный; x =\", x)\n",
     "        print(\"Также печатается только если x положительный; x =\", x)\n",
-    "    print(\"Always printed, regardless of x's value; x =\", x)\n",
+    "    print(\"Всегда печатается, независимо от значения x; x =\", x)\n",
     "\n",
     "f(1)\n",
     "f(0)"
