--- a/2 Python/6 Упражнение Булевы и условные операторы.ipynb
+++ b/2 Python/6 Упражнение Булевы и условные операторы.ipynb
@@ -242,7 +242,7 @@
    "source": [
     "Вот немного более лаконичное решение с использованием условного выражения:\n",
     "\n",
-    "print(\"Разделение\", total_candies, \"конфеты\" if total_candies == 1 else \"конфеты\")"
+    "print(\"Разделение\", total_candies, \"конфета\" if total_candies == 1 else \"конфеты\")"
    ]
   },
   {
@@ -672,6 +672,7 @@
     "Например, если рука игрока {A, A, A, 7}, мы посчитаем ее как 11 + 1 + 1 + 7,\n",
     "и поэтому установим player_total=20, player_low_aces=2, player_high_aces=1.\n",
     "    \"\"\"\n",
+    "    if \n",
     "    return False"
    ]
   },
@@ -756,12 +757,28 @@
    "outputs": [],
    "source": [
     "def should_hit(dealer_total, player_total, player_low_aces, player_high_aces):\n",
-    "    \"\"\"Верните True, если игрок должен прикупить (запросить еще одну карту) с учетом текущего состояния игры, или \n",
+    "    \"\"\"Верните True, если игрок должен прикупить (запросить еще \n",
+    "    одну карту) с учетом текущего состояния игры, или \n",
     "    False, если игрок должен остаться.\n",
-    "При расчете общей стоимости руки мы считаем тузы «высокими» (со стоимостью 11), если это не приводит к общей сумме \n",
-    "выше 21, в противном случае мы считаем их низкими (со стоимостью 1).\n",
-    "Например, если рука игрока {A, A, A, 7}, мы посчитаем ее как 11 + 1 + 1 + 7,\n",
-    "и поэтому установим player_total=20, player_low_aces=2, player_high_aces=1.\n",
+    "При расчете общей стоимости руки мы считаем тузы «высокими» (со \n",
+    "стоимостью 11), если это не приводит к общей сумме \n",
+    "выше 21, в противном случае мы считаем их низкими (со стоимостью \n",
+    "1).\n",
+    "Например, если рука игрока {A, A, A, 7}, мы посчитаем ее как 11 \n",
+    "+ 1 + 1 + 7,\n",
+    "и поэтому установим player_total=20, player_low_aces=2, \n",
+    "player_high_aces=1.\n",
+    "    \"\"\"\n",
+    "    \"\"\"Верните True, если игрок должен прикупить (запросить еще \n",
+    "    одну карту) с учетом текущего состояния игры, или False, \n",
+    "    если игрок должен остаться.\n",
+    "При расчете общей стоимости руки мы считаем тузы «высокими» (со \n",
+    "стоимостью 11), если это не приводит к общей сумме выше 21, в \n",
+    "противном случае мы считаем их низкими (со стоимостью 1).\n",
+    "Например, если рука игрока {A, A, A, 7}, мы посчитаем ее как 11 \n",
+    "+ 1 + 1 + 7,\n",
+    "и поэтому установим player_total=20, player_low_aces=2, \n",
+    "player_high_aces=1.\n",
     "    \"\"\"\n",
     "    return False\n",
     "\n",
