--- a/2 Python/3 Функции и получение помощи.ipynb
+++ b/2 Python/3 Функции и получение помощи.ipynb
@@ -848,17 +848,9 @@
    "id": "25268dea",
    "metadata": {},
    "source": [
-    "Your Turn¶\n",
-    "Функции открывают совершенно новый мир в программировании на Python. Попробуйте использовать их сами."
+    "# ваш ход¶\n",
+    "Эти функции открывают совершенно новый мир в программировании на Python. Попробуйте использовать их самостоятельно."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "becccd66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
